# note_rs

./: Cargo.toml  notes.json  notes.txt
src/: input_popup.rs  main.rs
