[package]
name = "note_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
# termion = { version = "1.5", optional = true }
crossterm = { version = "0.25", optional = false }
# serde = { version = "1", optional = true, features = ["derive"]}

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }